--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>TOÁN TƯ DUY</title>
+    <title>LUYỆN THI TRẦN ĐẠI NGHĨA</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4J4STBFK91"></script>
     <script>
